# pypkg-audit-ptc-agent

./: .env.example  .gitignore  AGENT-PROMPT.md  ARCHITECTURE.md  CLAUDE.md  DEEP-AGENT-DESIGN.md  Dockerfile  LICENSE  Makefile  PUBLICATION-AUDIT.md  README.md  audit.py  config-gpt4o.yaml  config.yaml  pyproject.toml  requirements.txt  token-savings-report.md
.backup/: REFERENCE_RESULTS.md  prompts.py.bak
.cursor/: mcp.json
experiments/: requirements-real-test.txt
experiments/template_codegen/: PLAN.md  README.md  audit.py  codegen.py  prompts.py  run_experiment.py  schema.py  template_pipeline.py
experiments/template_codegen/mcp_servers/: deps_dev.py  epss.py  github_api.py  license_check.py  nvd.py  osv.py  pypi.py  retry.py  scorecard.py
src/: __init__.py
src/agent/: __init__.py  events.py  executor.py  llm.py  pipeline.py  planner.py  prompts.py  schema.py  subagent.py  synthesizer.py  tool_catalog.py
src/config/: __init__.py  core.py  loaders.py
src/core/: __init__.py  mcp_registry.py  tool_generator.py
src/mcp_servers/: __init__.py  deps_dev.py  epss.py  github_api.py  license_check.py  nvd.py  osv.py  pypi.py  scorecard.py
src/sandbox/: __init__.py  docker_backend.py  docker_sandbox.py
src/tools/: audit_tools.py  ptc_ptd_compliance.py
src/tools/docs/: github_tool.md  nvd_tool.md  pypi_tool.md
tests/: test_codegen_quality.py  test_event_bus.py  test_ptd_selection.py  test_wave1.py
